Kind of routers and stuff

--- a/component/example/index.html
+++ b/component/example/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Component test</title>
+		<title>Directory</title>
 		<script src="./dist/index.js" type="module"></script>
+		<link rel="stylesheet" href="./dist/index.css" />
 	</head>
 	<body>
-		<h1>Component test</h1>
-
 		<div id="output"></div>
 	</body>
 </html>
