--- a/component/example/index.html
+++ b/component/example/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="./dist/index.css" />
 	</head>
 	<body>
-		<div id="output"></div>
+		<div
+			class="view"
+			id="output"
+		></div>
 	</body>
 </html>
