--- a/web/example/dist-golden/styles.css
+++ b/web/example/dist-golden/styles.css
@@ -1,6 +1,34 @@
 :root {
+	background: transparent;
+	border: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
+	font-style: inherit;
+	font-weight: inherit;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-decoration: inherit;
 	--fontBase_family: monospace;
 	--fontBase_size: 24;
-	font-family: var(--fontBase_family);
-	font-size: calc(var(--fontBase_size) * 1px);
+	--phone: 600;
+	--tablet: 1000;
+	font-family: monospace;
+	font-size: calc(24 * 1px);
+}
+
+.type-h1 {
+	color: darkgreen;
+}
+
+.type-h2 {
+	color: blue;
+}
+
+h1 {
+	color: darkgreen;
+	--varName: 'h1';
 }
