--- a/example/dist-golden/styles.css
+++ b/example/dist-golden/styles.css
@@ -33,3 +33,23 @@ h1 {
 *:target {
 	outline: 1px solid red;
 }
+
+[data-component='ModalContainer'] {
+	align-items: center;
+	backdrop-filter: blur(5px);
+	background: #00000060;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	left: 0;
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	transition: opacity 0.2s;
+	width: 100%;
+
+	&[data-modal='entering'],
+	&[data-modal='active'] {
+		opacity: 1;
+	}
+}
