--- a/example/dist-golden/index.html.css
+++ b/example/dist-golden/index.html.css
@@ -4,12 +4,12 @@ input {
 	font-size: 24px;
 }
 
-[data-component='TransitionTest'] {
+[is='l-transitiontest'] {
 	background: #ff0000;
 	height: 100px;
 	width: 100px;
 }
 
-[data-component='IndexPage'] h1 {
+[is='l-indexpage'] h1 {
 	color: red;
 }
