--- a/example/dist-golden/styles.css
+++ b/example/dist-golden/styles.css
@@ -37,7 +37,7 @@ h1 {
 [is='l-modalcontainer'] {
 	align-items: center;
 	backdrop-filter: blur(5px);
-	background: #00000060;
+	background: #000000c0;
 	display: flex;
 	height: 100%;
 	justify-content: center;
@@ -45,11 +45,15 @@ h1 {
 	opacity: 0;
 	position: fixed;
 	top: 0;
-	transition: opacity 0.2s;
+	transition: opacity 0.2s linear;
 	width: 100%;
 
-	&[data-modal='entering'],
-	&[data-modal='active'] {
+	&[data-transition-state='inactive'] {
+		display: none;
+	}
+
+	&[data-transition-state='activating'],
+	&[data-transition-state='active'] {
 		opacity: 1;
 	}
 }
