--- a/example/dist-golden/styles.css
+++ b/example/dist-golden/styles.css
@@ -47,6 +47,7 @@ h1 {
 	top: 0;
 	transition: opacity 0.2s linear;
 	width: 100%;
+	z-index: 9999;
 
 	&[data-transition-state='inactive'] {
 		display: none;
