--- a/example/dist-golden/index.html.css
+++ b/example/dist-golden/index.html.css
@@ -8,7 +8,7 @@ input {
 	font-size: 24px;
 }
 
-[is='l-progressmodal'] {
+l-progressmodal {
 	& circle {
 		stroke: #ff0000;
 		transition: stroke-dasharray 10s;
