--- a/example/dist-golden/404.html.css
+++ b/example/dist-golden/404.html.css
@@ -1,3 +1,34 @@
+[is='l-modalcontainer'] {
+	align-items: center;
+	background: transparent;
+	border: 0;
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	padding: 0;
+	width: 100%;
+
+	&::backdrop {
+		backdrop-filter: blur(5px);
+		background: #000000b0;
+	}
+
+	&,
+	&::backdrop {
+		opacity: 0;
+		transition: opacity var(--modalContainerDuration) linear;
+	}
+
+	&[data-transition-state='activating'],
+	&[data-transition-state='active'] {
+
+		&,
+		&::backdrop {
+			opacity: 1;
+		}
+	}
+}
+
 [is='l-nav'] {
 	color: #444444;
 }
