--- a/example/dist-golden/index.html.css
+++ b/example/dist-golden/index.html.css
@@ -19,6 +19,10 @@
 		transition: opacity var(--modalContainerDuration) linear;
 	}
 
+	&[data-transition-state='inactive'] {
+		display: none;
+	}
+
 	&[data-transition-state='activating'],
 	&[data-transition-state='active'] {
 
