--- a/example/dist-golden/index.html.css
+++ b/example/dist-golden/index.html.css
@@ -3,6 +3,7 @@
 	background: transparent;
 	border: 0;
 	display: flex;
+	flex-direction: column;
 	height: 100%;
 	justify-content: center;
 	padding: 0;
