--- a/example/dist-golden/404.html.css
+++ b/example/dist-golden/404.html.css
@@ -6,6 +6,8 @@
 	flex-direction: column;
 	height: 100%;
 	justify-content: center;
+	max-height: none;
+	max-width: none;
 	padding: 0;
 	width: 100%;
 
