--- a/example/dist-golden/index.html.css
+++ b/example/dist-golden/index.html.css
@@ -1,3 +1,148 @@
+input {
+	--typeface-name: 'body';
+	font-family: monospace;
+	font-size: 24px;
+}
+
+l-progresscircle {
+	display: contents;
+}
+
+l-progressmodal {
+	& circle {
+		stroke: #ff0000;
+		transition: stroke-dasharray 10s;
+	}
+}
+
+[is='l-transitiontest'] {
+	background: #ff0000;
+	height: 100px;
+	width: 100px;
+}
+
+[is='l-indexpage'] {
+	._bounce {
+		animation: bounce 3.0100000000000002s infinite;
+		aspect-ratio: 1;
+		background: red;
+		border-radius: 50%;
+		display: block;
+		position: relative;
+		width: 100px;
+	}
+}
+
+@keyframes bounce {
+	0% {
+		bottom: 0px;
+	}
+
+	16.61% {
+		animation-timing-function: ease-in;
+		bottom: 100px;
+	}
+
+	26.58% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	36.54% {
+		animation-timing-function: ease-in;
+		bottom: 60px;
+	}
+
+	42.52% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	48.5% {
+		animation-timing-function: ease-in;
+		bottom: 36px;
+	}
+
+	52.16% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	55.81% {
+		animation-timing-function: ease-in;
+		bottom: 21.6px;
+	}
+
+	58.14% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	60.47% {
+		animation-timing-function: ease-in;
+		bottom: 12.96px;
+	}
+
+	61.79% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	63.12% {
+		animation-timing-function: ease-in;
+		bottom: 7.78px;
+	}
+
+	63.79% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	64.45% {
+		animation-timing-function: ease-in;
+		bottom: 4.67px;
+	}
+
+	64.78% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	65.12% {
+		animation-timing-function: ease-in;
+		bottom: 2.8px;
+	}
+
+	65.45% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	65.78% {
+		animation-timing-function: ease-in;
+		bottom: 1.68px;
+	}
+
+	66.11% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	66.45% {
+		animation-timing-function: ease-in;
+		bottom: 1.01px;
+	}
+
+	66.78% {
+		animation-timing-function: ease-out;
+		bottom: 0px;
+	}
+
+	100% {
+		bottom: 0;
+	}
+}
+
 [is='l-indexpage'] {
 	h1 {
 		color: red;
